Update portfolio links to include direct URLs for DigiLiteracy.Africa, MySmartMedic, and SmartAfri.com

--- a/index.html
+++ b/index.html
@@ -897,7 +897,9 @@
                   class="col col-d-6 col-t-6 col-m-12 grid-item design border-line-h">
                   <div class="box-item">
                     <div class="image">
-                      <a href="#" class="has-popup-media">
+                      <a
+                        href="https://digiliteracy.africa/"
+                        class="has-popup-media">
                         <img
                           src="images/works/work1.jpg"
                           alt="DigiLiteracy.Africa" />
@@ -907,7 +909,9 @@
                       </a>
                     </div>
                     <div class="desc">
-                      <a href="#" class="name">DigiLiteracy.Africa</a>
+                      <a href="https://digiliteracy.africa" class="name"
+                        >DigiLiteracy.Africa</a
+                      >
                       <div class="category">AI-based E-learning Platform</div>
                     </div>
                   </div>
@@ -918,7 +922,9 @@
                   class="col col-d-6 col-t-6 col-m-12 grid-item design border-line-h">
                   <div class="box-item">
                     <div class="image">
-                      <a href="#" class="has-popup-media">
+                      <a
+                        href="https://mysmartmedic.com"
+                        class="has-popup-media">
                         <img src="images/works/work2.jpg" alt="MySmartMedic" />
                         <span class="info">
                           <span class="ion ion-images"></span>
@@ -926,7 +932,9 @@
                       </a>
                     </div>
                     <div class="desc">
-                      <a href="#" class="name">MySmartMedic</a>
+                      <a href="https://mysmartmedic.com" class="name"
+                        >MySmartMedic</a
+                      >
                       <div class="category">Telemedicine Platform</div>
                     </div>
                   </div>
@@ -964,7 +972,9 @@
                       </a>
                     </div>
                     <div class="desc">
-                      <a href="#" class="name">SmartAfri.com</a>
+                      <a href="https://smartafri.com" class="name"
+                        >SmartAfri.com</a
+                      >
                       <div class="category">E-marketplace Platform</div>
                     </div>
                   </div>
