feat: Implement dynamic WhatsApp link generation on the 'yes' page based on URL parameters.

--- a/v-day/yes.html
+++ b/v-day/yes.html
@@ -22,8 +22,8 @@
 
         <p class="yes-message">You just made me the happiest person! 💕</p>
         
-        <div class="buttons" style="margin-top: 20px;">
-            <a href="https://wa.me/+2348162756220?text=Yes%20I%20will%20be%20your%20valentine!%20%F0%9F%92%96" target="_blank" style="text-decoration: none;">
+        <div class="buttons" id="whatsapp-container" style="margin-top: 20px;">
+            <a id="whatsapp-link" href="https://wa.me/+2348162756220?text=Yes%20I%20will%20be%20your%20valentine!%20%F0%9F%92%96" target="_blank" style="text-decoration: none;">
                 <button id="whatsapp-btn" style="background-color: #25D366; color: white; border: none; border-radius: 12px; padding: 12px 24px; font-size: 1.2rem; font-weight: 700; cursor: pointer; display: flex; align-items: center; gap: 10px; box-shadow: 0 4px 12px rgba(37, 211, 102, 0.4);">
                     Send me a message 💬
                 </button>
